// Vitest Snapshot v1

exports[`analyzePatterns > 16th candles 1`] = `
{
  "dlu-candle": {
    "collection": Map {
      "6" => {
        "completed": true,
        "containedNotePositionsInMeasure": [
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 6,
            "noteQuantitization": 16,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 7,
            "noteQuantitization": 8,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 8,
            "noteQuantitization": 16,
          },
        ],
        "noteCheckIndex": 3,
        "patternQuantitization": 16,
      },
    },
    "count": 1,
    "key": "dlu-candle",
  },
  "dru-candle": {
    "collection": Map {
      "9" => {
        "completed": true,
        "containedNotePositionsInMeasure": [
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 9,
            "noteQuantitization": 4,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 10,
            "noteQuantitization": 16,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 11,
            "noteQuantitization": 8,
          },
        ],
        "noteCheckIndex": 3,
        "patternQuantitization": 16,
      },
    },
    "count": 1,
    "key": "dru-candle",
  },
  "uld-candle": {
    "collection": Map {
      "4" => {
        "completed": true,
        "containedNotePositionsInMeasure": [
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 4,
            "noteQuantitization": 16,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 5,
            "noteQuantitization": 4,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 6,
            "noteQuantitization": 16,
          },
        ],
        "noteCheckIndex": 3,
        "patternQuantitization": 16,
      },
    },
    "count": 1,
    "key": "uld-candle",
  },
  "urd-candle": {
    "collection": Map {
      "1" => {
        "completed": true,
        "containedNotePositionsInMeasure": [
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 1,
            "noteQuantitization": 4,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 2,
            "noteQuantitization": 16,
          },
          {
            "measureNumber": 1,
            "measureQuantitization": 16,
            "notePosInMeasure": 3,
            "noteQuantitization": 8,
          },
        ],
        "noteCheckIndex": 3,
        "patternQuantitization": 16,
      },
    },
    "count": 1,
    "key": "urd-candle",
  },
}
`;

exports[`parse > works 1`] = `
[
  {
    "down": false,
    "id": "1",
    "left": false,
    "measure": 1,
    "measureQuantitization": 4,
    "notePosInMeasure": 1,
    "noteQuantitization": 4,
    "raw": "0010",
    "right": false,
    "up": true,
  },
  {
    "down": false,
    "id": "2",
    "left": false,
    "measure": 1,
    "measureQuantitization": 4,
    "notePosInMeasure": 2,
    "noteQuantitization": 4,
    "raw": "0001",
    "right": true,
    "up": false,
  },
  {
    "down": true,
    "id": "3",
    "left": false,
    "measure": 1,
    "measureQuantitization": 4,
    "notePosInMeasure": 3,
    "noteQuantitization": 4,
    "raw": "0100",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "4",
    "left": false,
    "measure": 1,
    "measureQuantitization": 4,
    "notePosInMeasure": 4,
    "noteQuantitization": 4,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "5",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 1,
    "noteQuantitization": 4,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "6",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 2,
    "noteQuantitization": 8,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "7",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 3,
    "noteQuantitization": 4,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "8",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 4,
    "noteQuantitization": 8,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "9",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 5,
    "noteQuantitization": 4,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "10",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 6,
    "noteQuantitization": 8,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "11",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 7,
    "noteQuantitization": 4,
    "raw": "0000",
    "right": false,
    "up": false,
  },
  {
    "down": false,
    "id": "12",
    "left": false,
    "measure": 2,
    "measureQuantitization": 8,
    "notePosInMeasure": 8,
    "noteQuantitization": 8,
    "raw": "0000",
    "right": false,
    "up": false,
  },
]
`;

exports[`parse > works 2`] = `
[
  {
    "notes": [
      {
        "down": false,
        "id": "1",
        "left": false,
        "measure": 1,
        "measureQuantitization": 4,
        "notePosInMeasure": 1,
        "noteQuantitization": 4,
        "raw": "0010",
        "right": false,
        "up": true,
      },
      {
        "down": false,
        "id": "2",
        "left": false,
        "measure": 1,
        "measureQuantitization": 4,
        "notePosInMeasure": 2,
        "noteQuantitization": 4,
        "raw": "0001",
        "right": true,
        "up": false,
      },
      {
        "down": true,
        "id": "3",
        "left": false,
        "measure": 1,
        "measureQuantitization": 4,
        "notePosInMeasure": 3,
        "noteQuantitization": 4,
        "raw": "0100",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "4",
        "left": false,
        "measure": 1,
        "measureQuantitization": 4,
        "notePosInMeasure": 4,
        "noteQuantitization": 4,
        "raw": "0000",
        "right": false,
        "up": false,
      },
    ],
    "number": 1,
    "quantitization": 4,
  },
  {
    "notes": [
      {
        "down": false,
        "id": "5",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 1,
        "noteQuantitization": 4,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "6",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 2,
        "noteQuantitization": 8,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "7",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 3,
        "noteQuantitization": 4,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "8",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 4,
        "noteQuantitization": 8,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "9",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 5,
        "noteQuantitization": 4,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "10",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 6,
        "noteQuantitization": 8,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "11",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 7,
        "noteQuantitization": 4,
        "raw": "0000",
        "right": false,
        "up": false,
      },
      {
        "down": false,
        "id": "12",
        "left": false,
        "measure": 2,
        "measureQuantitization": 8,
        "notePosInMeasure": 8,
        "noteQuantitization": 8,
        "raw": "0000",
        "right": false,
        "up": false,
      },
    ],
    "number": 2,
    "quantitization": 8,
  },
]
`;
